Analysis fixes